--- a/modules/gateway/console/src/main/java/com/l7tech/console/panels/LookupTrustedCertificateAssertionPropertiesDialog.form
+++ b/modules/gateway/console/src/main/java/com/l7tech/console/panels/LookupTrustedCertificateAssertionPropertiesDialog.form
@@ -1,38 +1,21 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="com.l7tech.console.panels.LookupTrustedCertificateAssertionPropertiesDialog">
-  <grid id="27dc6" binding="mainPanel" layout-manager="GridLayoutManager" row-count="5" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+  <grid id="27dc6" binding="mainPanel" layout-manager="GridLayoutManager" row-count="16" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="12" bottom="0" right="12"/>
     <constraints>
-      <xy x="20" y="20" width="500" height="305"/>
+      <xy x="20" y="20" width="554" height="402"/>
     </constraints>
     <properties/>
     <border type="none"/>
     <children>
-      <component id="c13d1" class="javax.swing.JLabel">
-        <constraints>
-          <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
-        </constraints>
-        <properties>
-          <labelFor value="dd38f"/>
-          <text resource-bundle="com/l7tech/console/panels/LookupTrustedCertificateAssertionPropertiesDialog" key="name.label"/>
-        </properties>
-      </component>
       <vspacer id="78acb">
         <constraints>
-          <grid row="4" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
+          <grid row="15" column="1" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
         </constraints>
       </vspacer>
-      <component id="dd38f" class="javax.swing.JTextField" binding="trustedCertificateNameTextField">
-        <constraints>
-          <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
-            <preferred-size width="150" height="-1"/>
-          </grid>
-        </constraints>
-        <properties/>
-      </component>
       <component id="657e8" class="javax.swing.JCheckBox" binding="failMultipleCertificatesCheckBox">
         <constraints>
-          <grid row="2" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+          <grid row="13" column="0" row-span="1" col-span="3" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
           <text resource-bundle="com/l7tech/console/panels/LookupTrustedCertificateAssertionPropertiesDialog" key="allow-multiple.label"/>
@@ -40,26 +23,182 @@
       </component>
       <hspacer id="bc221">
         <constraints>
-          <grid row="0" column="0" row-span="1" col-span="2" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false">
+          <grid row="0" column="0" row-span="1" col-span="3" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false">
             <preferred-size width="420" height="-1"/>
           </grid>
         </constraints>
       </hspacer>
       <component id="b0336" class="com.l7tech.console.panels.TargetVariablePanel" binding="targetVariablePanel">
         <constraints>
-          <grid row="3" column="1" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+          <grid row="14" column="2" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties/>
       </component>
       <component id="bc046" class="javax.swing.JLabel">
         <constraints>
-          <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="9" fill="0" indent="0" use-parent-layout="false"/>
+          <grid row="14" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="0" anchor="9" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
           <labelFor value="dd38f"/>
           <text resource-bundle="com/l7tech/console/panels/LookupTrustedCertificateAssertionPropertiesDialog" key="variable-name.label"/>
         </properties>
       </component>
+      <component id="b3494" class="javax.swing.JRadioButton" binding="lookUpTrustedCertificateRadioButton" default-binding="true">
+        <constraints>
+          <grid row="1" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <selected value="true"/>
+          <text value="Look up Trusted Certificate by &amp;Name:"/>
+        </properties>
+      </component>
+      <component id="273c8" class="javax.swing.JRadioButton" binding="lookUpByThumbprintRadioButton">
+        <constraints>
+          <grid row="3" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <text value="Look up Certificate by &amp;ThumbprintSHA1:"/>
+        </properties>
+      </component>
+      <component id="dd38f" class="javax.swing.JTextField" binding="trustedCertificateNameTextField">
+        <constraints>
+          <grid row="1" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+            <preferred-size width="150" height="-1"/>
+          </grid>
+        </constraints>
+        <properties/>
+      </component>
+      <component id="68e44" class="javax.swing.JTextField" binding="certThumbprintField">
+        <constraints>
+          <grid row="3" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+            <preferred-size width="150" height="-1"/>
+          </grid>
+        </constraints>
+        <properties/>
+      </component>
+      <component id="ba338" class="javax.swing.JRadioButton" binding="lookUpBySkiRadioButton">
+        <constraints>
+          <grid row="5" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <text value="Look up Certificate by &amp;Subject Key ID:"/>
+        </properties>
+      </component>
+      <component id="50a58" class="javax.swing.JTextField" binding="certSkiField">
+        <constraints>
+          <grid row="5" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+            <preferred-size width="150" height="-1"/>
+          </grid>
+        </constraints>
+        <properties/>
+      </component>
+      <component id="605bf" class="javax.swing.JRadioButton" binding="lookUpByIssuerSerialRadioButton">
+        <constraints>
+          <grid row="9" column="0" row-span="1" col-span="3" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <text value="Look up Certificate by &amp;Issuer DN and Serial Number:"/>
+        </properties>
+      </component>
+      <component id="30447" class="javax.swing.JLabel">
+        <constraints>
+          <grid row="10" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <labelFor value="b0339"/>
+          <text value="Issue&amp;r DN:"/>
+        </properties>
+      </component>
+      <component id="62a01" class="javax.swing.JLabel">
+        <constraints>
+          <grid row="11" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <labelFor value="8c93f"/>
+          <text value="&amp;Serial Number:"/>
+        </properties>
+      </component>
+      <hspacer id="a60a4">
+        <constraints>
+          <grid row="10" column="0" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+        </constraints>
+      </hspacer>
+      <component id="b0339" class="javax.swing.JTextField" binding="certIssuerField">
+        <constraints>
+          <grid row="10" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+            <preferred-size width="150" height="-1"/>
+          </grid>
+        </constraints>
+        <properties/>
+      </component>
+      <component id="8c93f" class="javax.swing.JTextField" binding="certSerialField">
+        <constraints>
+          <grid row="11" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+            <preferred-size width="150" height="-1"/>
+          </grid>
+        </constraints>
+        <properties/>
+      </component>
+      <vspacer id="77f27">
+        <constraints>
+          <grid row="12" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false">
+            <maximum-size width="-1" height="24"/>
+          </grid>
+        </constraints>
+      </vspacer>
+      <vspacer id="46b4">
+        <constraints>
+          <grid row="6" column="1" row-span="1" col-span="1" vsize-policy="2" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false">
+            <preferred-size width="-1" height="6"/>
+          </grid>
+        </constraints>
+      </vspacer>
+      <vspacer id="f668e">
+        <constraints>
+          <grid row="4" column="1" row-span="1" col-span="1" vsize-policy="2" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false">
+            <preferred-size width="-1" height="6"/>
+          </grid>
+        </constraints>
+      </vspacer>
+      <vspacer id="219f2">
+        <constraints>
+          <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="2" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false">
+            <preferred-size width="-1" height="6"/>
+          </grid>
+        </constraints>
+      </vspacer>
+      <vspacer id="db4a3">
+        <constraints>
+          <grid row="8" column="1" row-span="1" col-span="1" vsize-policy="2" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false">
+            <preferred-size width="-1" height="6"/>
+          </grid>
+        </constraints>
+      </vspacer>
+      <component id="7a121" class="javax.swing.JRadioButton" binding="lookUpBySubjectDnRadioButton">
+        <constraints>
+          <grid row="7" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <text value="Look up Certificate by Subject DN:"/>
+        </properties>
+      </component>
+      <component id="55b6e" class="javax.swing.JTextField" binding="certSubjectDnField">
+        <constraints>
+          <grid row="7" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+            <preferred-size width="150" height="-1"/>
+          </grid>
+        </constraints>
+        <properties/>
+      </component>
     </children>
   </grid>
+  <buttonGroups>
+    <group name="buttonGroup1">
+      <member id="b3494"/>
+      <member id="273c8"/>
+      <member id="ba338"/>
+      <member id="605bf"/>
+      <member id="7a121"/>
+    </group>
+  </buttonGroups>
 </form>
