--- a/modules/gateway/console/src/main/java/com/l7tech/console/panels/resources/HttpRoutingAssertionDialog.form
+++ b/modules/gateway/console/src/main/java/com/l7tech/console/panels/resources/HttpRoutingAssertionDialog.form
@@ -3,7 +3,7 @@
   <grid id="83deb" binding="mainPanel" layout-manager="GridLayoutManager" row-count="2" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
-      <xy x="52" y="32" width="528" height="632"/>
+      <xy x="52" y="32" width="528" height="642"/>
     </constraints>
     <properties/>
     <border type="none"/>
@@ -645,7 +645,7 @@
                   </component>
                 </children>
               </grid>
-              <grid id="85b3f" layout-manager="GridLayoutManager" row-count="2" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+              <grid id="85b3f" layout-manager="GridLayoutManager" row-count="3" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
                 <margin top="0" left="0" bottom="0" right="0"/>
                 <constraints>
                   <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
@@ -674,6 +674,15 @@
                       <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
                     </constraints>
                     <properties/>
+                  </component>
+                  <component id="3149b" class="javax.swing.JCheckBox" binding="forceIncludeRequestBodyCheckBox" default-binding="true">
+                    <constraints>
+                      <grid row="2" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                    </constraints>
+                    <properties>
+                      <text value="Transmit &amp;body regardless of request method"/>
+                      <toolTipText value="Include a body with the request even if the method would normally not include one (GET, HEAD, DELETE, etc)"/>
+                    </properties>
                   </component>
                 </children>
               </grid>
