--- a/modules/gateway/console/src/main/java/com/l7tech/console/panels/LdapIdentityProviderConfigPanel.form
+++ b/modules/gateway/console/src/main/java/com/l7tech/console/panels/LdapIdentityProviderConfigPanel.form
@@ -5,7 +5,10 @@
     <constraints>
       <xy x="20" y="20" width="732" height="416"/>
     </constraints>
-    <properties/>
+    <properties>
+      <opaque value="false"/>
+      <preferredSize width="412" height="490"/>
+    </properties>
     <border type="none"/>
     <children>
       <grid id="a3229" layout-manager="GridLayoutManager" row-count="1" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
